adds 008 and 009 folders.

--- a/008_relative-urls/index.html
+++ b/008_relative-urls/index.html
@@ -7,9 +7,14 @@
 </head>
 <body>
 
-<!--p.happiness{HAPPY!}-->
+<!--relative-->
+<img src="puppy.jpg">
 
-<p class="happiness">This is a live edit!</p>
+<!--relative-->
+<img src="img/dog.jpg">
+
+<!--relative-->
+<img src="../000_img/pup.jpg">
 
 </body>
 </html>
