--- a/006_emmet/index.html
+++ b/006_emmet/index.html
@@ -16,5 +16,18 @@
 <h4>heading 004</h4>
 <h5>heading 005</h5>
 <h6>heading 006</h6>
+
+
+<ul>
+    <li>01</li>
+    <li>02</li>
+    <li>03</li>
+    <li>04</li>
+    <li>05</li>
+</ul>
+
+
+<a href="https://www.google.com" target="_blank">google</a>
+
 </body>
 </html>
